docs: Fixed height and scrollbar for expression preview

--- a/docs/app/pages/components/components-sections/search/logical-expression-builder/logical-expression-builder.component.less
+++ b/docs/app/pages/components/components-sections/search/logical-expression-builder/logical-expression-builder.component.less
@@ -1,1 +1,3 @@
-/* Keep */
+.logical-expression-builder-preview {
+    max-height: 250px;
+}
